refactor: private to false in package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@zerologin/elements",
   "description": "Zerologin auth web component",
   "version": "0.0.1-beta",
+  "private": false,
   "files": [
     "dist"
   ],
