refactor: add publishConfig.access to public for npm publish

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "Zerologin auth web component",
   "version": "0.0.1-beta",
   "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist"
   ],
