--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "@zerologin/elements",
   "description": "Zerologin auth web component",
-  "version": "0.0.4-beta",
+  "version": "0.0.5-beta",
   "private": false,
-  "publishConfig": {
-    "access": "public"
-  },
   "files": [
     "dist/"
   ],
@@ -34,13 +31,13 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "awesome-qr": "^2.1.5-rc.0",
     "ky": "^0.31.3",
-    "qrcode": "^1.5.1",
     "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@types/qrcode": "^1.5.0",
     "@vitejs/plugin-vue": "^3.1.0",
+    "sass": "^1.55.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vue-tsc": "^0.40.4"
