--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@zerologin/elements",
   "description": "Zerologin auth web component",
-  "version": "0.0.7-beta",
+  "version": "0.0.8-beta",
   "private": false,
   "files": [
     "dist/"
@@ -36,6 +36,7 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@dolu/vite-plugin-fonts": "^0.6.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "sass": "^1.55.0",
     "typescript": "^4.6.4",
