--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@zerologin/elements",
-  "description": "Zerologin auth web component",
-  "version": "0.0.9-beta",
+  "description": "Zerologin auth web components",
+  "version": "0.0.10-beta",
   "private": false,
   "files": [
     "dist/"
@@ -33,10 +33,13 @@
   "dependencies": {
     "awesome-qr": "^2.1.5-rc.0",
     "ky": "^0.31.3",
+    "peerjs": "^1.4.7",
+    "simple-peer": "^9.11.1",
     "vue": "^3.2.37"
   },
   "devDependencies": {
     "@dolu/vite-plugin-fonts": "^0.6.0",
+    "@types/simple-peer": "^9.11.5",
     "@vitejs/plugin-vue": "^3.1.0",
     "sass": "^1.55.0",
     "typescript": "^4.6.4",
